# trl-exp

./: caption_generation.py  data_captioning.py  grpo_train.py  hello.py  png_generation.py  pyproject.toml  requirements.txt  rewards.py  run_on_modal.py  sft.py  sft_dataset_generation.py  similarity_script.py  similarity_txt.py  svg_test.py  wandbtracker.py
dataset_scripts/: caption_generation.py  caption_generation_batch.py  caption_generation_blip.py  caption_generation_smollm.py  push_dataset.py  svg_test.py
