[project]
name = "trl-exp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cairosvg>=2.8.2",
    "clip",
    "func-timeout>=4.3.5",
    "pillow>=11.2.1",
    "torch>=2.7.1",
]
[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
